syntax = "proto3";

package calculator;
option go_package = "calculator/calculatorpb";


service CalculatorService{
    // Unary 
    rpc Sum(SumRequest) returns (SumResponse) {};
    rpc PrimeDecomposition(PrimeDecompositionRequest) returns (stream PrimeDecompositionResponse) {};

}; 

message PrimeDecompositionRequest{
    int32 prime_number = 1;
}

message PrimeDecompositionResponse{
    int32 prime_factor = 1;
}

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}

message SumResponse{
    int32 sum_result = 1;
}






